tdf#141973 create the text column to insert into

Change-Id: Ie5a09e7cd45ecbd1a9fd552c251538b2eeaccfb0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/114972
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>